--- a/styless.css
+++ b/styless.css
@@ -12,7 +12,7 @@ body {
 }
 
 main {
-    background-image: url(images/bg-intro-desktop.png);
+    background-image: url(/bg-intro-desktop.png);
     background-color: rgb(247 132 117);
     width: 80vw;
     margin: 0 auto;
@@ -122,7 +122,7 @@ td {height: 30px;
 @media (max-width:375px){
     main{
         background-color: rgb(247 132 117);
-        background-image: url(images/bg-intro-mobile.png);
+        background-image: url(/bg-intro-mobile.png);
         display: flex;
             flex-direction: column;
         width: 100vw;
